--- a/monolith/src/main/resources/application.yaml
+++ b/monolith/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: marketplace
+    name: monolith
   jackson:
     property-naming-strategy: SNAKE_CASE
 
@@ -13,6 +13,12 @@ spring:
   liquibase:
     enabled: false
 
+  cloud:
+    config.uri: http://localhost:8888
+
+  config:
+    import: 'optional:configserver:http://localhost:8888'
+
   data:
     web:
       pageable:
@@ -23,7 +29,3 @@ spring:
       ddl-auto: none
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-springdoc:
-  swagger-ui:
-    path: /swagger
