--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -3,6 +3,13 @@ server.port: 8081
 jwt:
   secret: "Yn2kjibddFAWtnPJ2AFlL8WXmohJMCvigQggaEypa5E="
 
+logging:
+  level:
+    web: DEBUG
+    org:
+      springframework:
+        security: DEBUG
+
 spring:
   application:
     name: users-service
