--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -3,6 +3,10 @@ server.port: 8080
 jwt:
   secret: "Yn2kjibddFAWtnPJ2AFlL8WXmohJMCvigQggaEypa5E="
 
+logging:
+  level:
+    root: debug
+
 spring:
   application:
     name: gateway
@@ -13,6 +17,6 @@ spring:
         - id: users-service
           uri: http://localhost:8081
           predicates:
-            - Path=/api/v1/users/**
+            - Path=/api/v1/**
           filters:
             - AuthenticationFilter
