--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -1,7 +1,23 @@
 server:
   port: 8888
-  
+
 spring:
+  application:
+    name: config-server
   profiles:
     active: native
-  cloud.config.server.native.search-locations: 'classpath:/config/'
+  cloud:
+    config:
+      server:
+        native:
+          search-locations:
+            - file:./config/
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}
