--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -20,3 +20,10 @@ spring:
             - Path=/api/v1/auth/login, /api/v1/users/**
           filters:
             - AuthenticationFilter
+
+        - id: categories-service
+          uri: http://localhost:8082
+          predicates:
+            - Path=/api/v1/categories/**
+          filters:
+            - AuthenticationFilter
