--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>gateway</module>
         <module>common</module>
         <module>user-service-client</module>
+        <module>category-service</module>
+        <module>security-module</module>
     </modules>
 
     <properties>
