--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -1,7 +1,5 @@
 server.port: 8080
 
-jwt:
-  secret: "Yn2kjibddFAWtnPJ2AFlL8WXmohJMCvigQggaEypa5E="
 
 logging:
   level:
@@ -10,8 +8,19 @@ logging:
 spring:
   application:
     name: gateway
+  config:
+    import: 'configserver:'
 
   cloud:
+    cloud:
+      config:
+        uri: http://localhost:8888
+        fail-fast: true
+        retry:
+          initial-interval: 2000
+          max-interval: 10000
+          multiplier: 2
+          max-attempts: 5
     gateway:
       routes:
         - id: users-service
