--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -1,6 +1,5 @@
 server.port: 8080
 
-
 logging:
   level:
     web: debug
@@ -12,26 +11,25 @@ spring:
     import: 'configserver:'
 
   cloud:
-    cloud:
-      config:
-        uri: http://localhost:8888
-        fail-fast: true
-        retry:
-          initial-interval: 2000
-          max-interval: 10000
-          multiplier: 2
-          max-attempts: 5
+    config:
+      uri: http://localhost:8888
+      fail-fast: true
+      retry:
+        initial-interval: 2000
+        max-interval: 10000
+        multiplier: 2
+        max-attempts: 5
     gateway:
       routes:
         - id: users-service
-          uri: http://localhost:8081
+          uri: lb://users-service
           predicates:
             - Path=/api/v1/auth/login, /api/v1/users/**
           filters:
             - AuthenticationFilter
 
         - id: categories-service
-          uri: http://localhost:8082
+          uri: lb://categories-service
           predicates:
             - Path=/api/v1/categories/**
           filters:
