--- a/listing-service/src/main/resources/application.yaml
+++ b/listing-service/src/main/resources/application.yaml
@@ -1,37 +1,31 @@
-server:
-  port: 8099
+server.port: 8082
+
+logging:
+  level:
+    web: DEBUG
+    org:
+      springframework:
+        security: DEBUG
 
 spring:
   application:
-    name: monolith-service
+    name: listings-service
+
   jackson:
     property-naming-strategy: SNAKE_CASE
 
-  datasource:
-    url: ${DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
-    username: ${DATASOURCE_USERNAME:postgres}
+  r2dbc:
+    url: ${DATASOURCE_URL:r2dbc:postgresql://localhost:5432/postgres}
     password: ${DATASOURCE_PASSWORD:postgres}
-    driver-class-name: org.postgresql.Driver
+    username: ${DATASOURCE_USERNAME:postgres}
 
   liquibase:
     enabled: false
-
-  cloud:
-    config.uri: http://localhost:8888
-
-  config:
-    import: 'optional:configserver:http://localhost:8888'
 
   data:
     web:
       pageable:
         max-page-size: 50
-
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: true
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 eureka:
   instance:
