tests: moved migrations directory

--- a/monolith/pom.xml
+++ b/monolith/pom.xml
@@ -91,6 +91,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- local -->
         <dependency>
             <groupId>ru.itmo.service.user.client</groupId>
             <artifactId>user-service-client</artifactId>
