--- a/monolith/src/test/resources/application.yaml
+++ b/monolith/src/test/resources/application.yaml
@@ -5,3 +5,7 @@ spring:
       hibernate:
         format_sql: true
         use_sql_comments: true
+
+  cloud:
+    discovery:
+      enabled: false
