--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -30,11 +30,32 @@ services:
       retries: 5
       start_period: 10s
 
-  monolith-service:
+  gateway:
     build:
       context: .
-      dockerfile: docker/monolith-service.Dockerfile
+      dockerfile: docker/gateway.Dockerfile
     ports:
-      - "8099:8099"
+      - "8080:8080"
+    depends_on:
+      eureka-server:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
     environment:
       EUREKA_URL: http://eureka-server:8761/eureka/
+      CONFIG_SERVER_URL: http://config-server:8888
+#    healthcheck:
+#      test: "curl --silent --fail gateway:8800/actuator/health | grep UP || exit 1"
+#      interval: 10s
+#      timeout: 5s
+#      retries: 5
+#      start_period: 10s
+
+#  monolith-service:
+#    build:
+#      context: .
+#      dockerfile: docker/monolith-service.Dockerfile
+#    ports:
+#      - "8099:8099"
+#    environment:
+#      EUREKA_URL: http://eureka-server:8761/eureka/
