--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,12 +104,18 @@ services:
         condition: service_healthy
       config-server:
         condition: service_healthy
+      gateway:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
     environment:
       EUREKA_URL: http://eureka-server:8761/eureka/
       CONFIG_SERVER_URL: http://config-server:8888
       DATASOURCE_URL: jdbc:postgresql://db:5432/postgres
     healthcheck:
-      test: "curl --silent --fail monolith-service:8081/actuator/health | grep UP || exit 1"
+      test: "curl --silent --fail monolith-service:8099/actuator/health | grep UP || exit 1"
       interval: 10s
       timeout: 5s
       retries: 5
@@ -127,6 +133,10 @@ services:
       eureka-server:
         condition: service_healthy
       config-server:
+        condition: service_healthy
+      gateway:
+        condition: service_healthy
+      db:
         condition: service_healthy
     environment:
       EUREKA_URL: http://eureka-server:8761/eureka/
@@ -152,7 +162,11 @@ services:
         condition: service_healthy
       config-server:
         condition: service_healthy
+      gateway:
+        condition: service_healthy
       user-service:
+        condition: service_healthy
+      db:
         condition: service_healthy
     environment:
       EUREKA_URL: http://eureka-server:8761/eureka/
