feature: added seller reviews feature in reviews service

--- a/review-service/pom.xml
+++ b/review-service/pom.xml
@@ -95,6 +95,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.itmo.service.user.client</groupId>
+            <artifactId>reactive-user-service-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- tests -->
         <dependency>
