--- a/review-service/src/main/resources/application.yaml
+++ b/review-service/src/main/resources/application.yaml
@@ -6,6 +6,8 @@ logging:
     org:
       springframework:
         security: DEBUG
+    ru.itmo.service.user.client:
+      UserServiceReactiveClient: DEBUG
 
 spring:
   application:
