--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>reactive-security-module</module>
         <module>deal-service</module>
         <module>review-service</module>
+        <module>reactive-user-service-client</module>
     </modules>
 
     <properties>
