--- a/reactive-user-service-client/pom.xml
+++ b/reactive-user-service-client/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>ru.itmo.service.user.client</groupId>
-    <artifactId>user-service-client</artifactId>
+    <artifactId>reactive-user-service-client</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -21,13 +21,20 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.playtika.reactivefeign</groupId>
+            <artifactId>feign-reactor-spring-cloud-starter</artifactId>
+            <version>4.2.1</version>
+            <type>pom</type>
         </dependency>
 
         <dependency>
