--- a/review-service/pom.xml
+++ b/review-service/pom.xml
@@ -101,6 +101,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.itmo.service.market.client</groupId>
+            <artifactId>market-service-reactive-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- tests -->
         <dependency>
