add routing in gateway to market service

--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -35,10 +35,10 @@ spring:
           filters:
             - AuthenticationFilter
 
-        - id: listings-service
-          uri: lb://listings-service
+        - id: market-service
+          uri: lb://market-service
           predicates:
-            - Path=/api/v1/listings/**
+            - Path=/api/v1/deals/**, /api/v1/listings/**, /api/v1/categories/**, /api/v1/saved-listings/**
           filters:
             - AuthenticationFilter
 
