--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>security-module</module>
         <module>eureka-server</module>
         <module>reactive-security-module</module>
+        <module>market-service</module>
         <module>deal-service</module>
         <module>review-service</module>
         <module>reactive-user-service-client</module>
