fix: fixed seller review tests

--- a/review-service/src/test/resources/application.yaml
+++ b/review-service/src/test/resources/application.yaml
@@ -5,3 +5,7 @@ spring:
       enabled: false
     discovery:
       enabled: false
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:data/*
