--- a/config-server/config/market-service.yaml
+++ b/config-server/config/market-service.yaml
@@ -1,10 +1,27 @@
 spring:
+  jackson:
+    property-naming-strategy: SNAKE_CASE
+
+  datasource:
+    url: ${DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
+    password: ${DATASOURCE_PASSWORD:postgres}
+    username: ${DATASOURCE_USERNAME:postgres}
+    driver-class-name: org.postgresql.Driver
+
+  liquibase:
+    enabled: false
+
   cloud:
     openfeign:
       circuitbreaker:
         enabled: true
         alphanumeric-ids:
           enabled: true
+
+  data:
+    web:
+      pageable:
+        max-page-size: 50
 
 resilience4j:
   circuitbreaker:
@@ -26,3 +43,11 @@ resilience4j:
         timeout-duration:
           seconds: 1
         cancel-running-future: true
+
+
+logging:
+  level:
+    web: DEBUG
+    org:
+      springframework:
+        security: DEBUG
