--- a/config-server/config/gateway.yaml
+++ b/config-server/config/gateway.yaml
@@ -26,3 +26,7 @@ resilience4j:
         timeout-duration:
           seconds: 1
         cancel-running-future: true
+
+logging:
+  level:
+    web: debug
