--- a/config-server/config/reviews-service.yaml
+++ b/config-server/config/reviews-service.yaml
@@ -5,6 +5,28 @@ spring:
         enabled: true
         alphanumeric-ids:
           enabled: true
+  jackson:
+    property-naming-strategy: SNAKE_CASE
+
+  datasource:
+    url: ${DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
+    username: ${DATASOURCE_USERNAME:postgres}
+    password: ${DATASOURCE_PASSWORD:postgres}
+    driver-class-name: org.postgresql.Driver
+
+  liquibase:
+    enabled: false
+
+  data:
+    web:
+      pageable:
+        max-page-size: 50
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 resilience4j:
   circuitbreaker:
@@ -26,3 +48,10 @@ resilience4j:
         timeout-duration:
           seconds: 1
         cancel-running-future: true
+
+logging:
+  level:
+    web: DEBUG
+    org:
+      springframework:
+        security: DEBUG
