--- a/market-service/pom.xml
+++ b/market-service/pom.xml
@@ -193,9 +193,7 @@
                 <version>0.8.12</version>
                 <configuration>
                     <excludes>
-                        <exclude>**/*ru/itmo/marketplace/api/**</exclude>
-                        <exclude>**/*ru/itmo/marketplace/model/**</exclude>
-                        <exclude>**/*ru/itmo/marketplace/mapper/**</exclude>
+                        <exclude>**/mapper/**</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -231,8 +229,7 @@
                                 </rule>
                             </rules>
                             <excludes>
-                                <exclude>**/*ru/itmo/marketplace/api/**</exclude>
-                                <exclude>**/*ru/itmo/marketplace/model/**</exclude>
+                                <exclude>**/mapper/**</exclude>
                             </excludes>
                         </configuration>
                     </execution>
