--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>market-service-reactive-client</module>
         <module>authentication-service</module>
         <module>authentication-service-client</module>
+        <module>notification-service</module>
     </modules>
 
     <properties>
