--- a/market-service/pom.xml
+++ b/market-service/pom.xml
@@ -34,7 +34,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
         <!-- persistence -->
         <dependency>
             <groupId>org.postgresql</groupId>
