--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -39,7 +39,10 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
             <version>3.4.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
         <!-- util -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
