--- a/notification-service/src/main/resources/application.yaml
+++ b/notification-service/src/main/resources/application.yaml
@@ -27,3 +27,13 @@ eureka:
     registryFetchIntervalSeconds: 5
     serviceUrl:
       defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}
+
+app:
+  kafka:
+    url: "kafka-1:9092,kafka-2:9092,kafka-3:9092"
+    group-id: notification-service
+    topics:
+      listing-status-updated: listing-status-updated
+      saved-listing-unavailable: saved-listing-unavailable
+      deal-created: deal-created
+      deal-confirmation: deal-confirmation
