--- a/image-service/src/main/resources/application.yaml
+++ b/image-service/src/main/resources/application.yaml
@@ -1,5 +1,19 @@
 server.port: 8086
+
+app:
+  minio:
+    url: ${MINIO_URL:http://127.0.0.1:9000}
+    username: ${MINIO_USERNAME:user}
+    password: ${MINIO_PASSWORD:password}
+    bucket: images
+
 spring:
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
+
   application:
     name: image-service
 
