--- a/authentication-service/src/test/resources/application.yaml
+++ b/authentication-service/src/test/resources/application.yaml
@@ -8,3 +8,6 @@ spring:
       enabled: false
     discovery:
       enabled: false
+  liquibase:
+    enabled: true
+    change-log: classpath:migrations/master.xml
