--- a/review-service/src/test/resources/application.yaml
+++ b/review-service/src/test/resources/application.yaml
@@ -7,5 +7,8 @@ spring:
       enabled: false
     discovery:
       enabled: false
+  liquibase:
+    enabled: true
+    change-log: classpath:migrations/master.xml
   main:
     web-application-type: reactive
