--- a/user-service/src/test/resources/application.yaml
+++ b/user-service/src/test/resources/application.yaml
@@ -5,3 +5,6 @@ spring:
       enabled: false
     discovery:
       enabled: false
+  liquibase:
+    enabled: true
+    change-log: classpath:migrations/master.xml
