fix: for docker workflow

--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -23,6 +23,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set lower case owner name
+        run: |
+          echo "REPOSITORY_LC=${REPOSITORY,,}" >>${GITHUB_ENV}
+        env:
+          REPOSITORY: '${{ github.repository }}'
+
       - name: Build Docker image for ${{ matrix.service }}
         env:
           IMAGE_TAG: ${{ github.sha }}
@@ -36,4 +42,4 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push Docker image for ${{ matrix.service }}
-        run: docker push ${{ env.REGISTRY }}/${{ github.repository }}/${{ matrix.service }}:${{ env.IMAGE_TAG }}
+        run: docker push ${{ env.REGISTRY }}/${{ env.REPOSITORY_LC }}/${{ matrix.service }}:${{ env.IMAGE_TAG }}
