--- a/review-service/pom.xml
+++ b/review-service/pom.xml
@@ -91,7 +91,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
         <!-- local -->
         <dependency>
             <groupId>ru.itmo.common</groupId>
