--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -66,7 +66,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
         <!-- persistence -->
         <dependency>
             <groupId>org.postgresql</groupId>
