--- a/config-server/config/reviews-service.yaml
+++ b/config-server/config/reviews-service.yaml
@@ -55,3 +55,7 @@ logging:
     org:
       springframework:
         security: DEBUG
+
+api:
+  server:
+    url: ${API_SERVER_URL:http://localhost:8080}
