fix: add parameters to test resource

--- a/market-service/src/test/resources/application.yaml
+++ b/market-service/src/test/resources/application.yaml
@@ -21,3 +21,7 @@ app:
       saved-listing-unavailable: listing-unavailable
       deal-created: deal-created
       deal-confirmation: deal-confirmation
+
+api:
+  server:
+    url: http://localhost:8080
