--- a/user-service/src/test/resources/application.yaml
+++ b/user-service/src/test/resources/application.yaml
@@ -8,3 +8,7 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:migrations/master.xml
+
+api:
+  server:
+    url: http://localhost:8080
